2008-02-18  Samuel Weinig  <sam@webkit.org>

        Reviewed by Geoff Garen.

        Fix for http://bugs.webkit.org/show_bug.cgi?id=17419
        Remove CompatMode from JavaScriptCore as it is never set to anything other than NativeMode

        * bindings/js/kjs_proxy.cpp:
        (WebCore::KJSProxy::initScript):

2008-02-18  Alp Toker  <alp@atoker.com>

        Reviewed by Mark Rowe.

        http://bugs.webkit.org/show_bug.cgi?id=17381
        [CURL] Regression: data URL parsing broken after DeprecatedString removal (Acid2)

        This patch resolves the regression for the GTK+ port.

        * platform/network/curl/ResourceHandleManager.cpp:
        (WebCore::parseDataUrl):

2008-02-18  Darin Adler  <darin@apple.com>

        Reviewed by Sam.

        * platform/network/win/ResourceHandleWin.cpp:
        (WebCore::ResourceHandle::onHandleCreated): Use String instead of DeprecatedString.
        (WebCore::ResourceHandle::start): Ditto.

2008-02-18  Darin Adler  <darin@apple.com>

        Reviewed by Sam.

        * platform/network/win/CookieJarWin.cpp:
        (WebCore::setCookies): Use String instead of DeprecatedString.
        (WebCore::cookies): Ditto.

2008-02-18  Darin Adler  <darin@apple.com>

        Reviewed by Sam.

        - removed use of DeprecatedString in the Color class

        * platform/graphics/Color.cpp:
        (WebCore::Color::parseHexColor): Streamlined logic a bit with early returns.
        Used toASCIIHexValue a character at a time rather than using toIntStrict
        in base 16 mode.
        (WebCore::findNamedColor): Added. Uses a fixed-size char buffer to look up
        a color using the gperf-generated findColor function. Saves a memory allocation
        vs. the old version that called DeprecatedString::latin1().
        (WebCore::Color::setNamedColor): Changed to use findNamedColor.

2008-02-18  Darin Adler  <darin@apple.com>

        Reviewed by Sam.

        * editing/htmlediting.cpp: