@@ -1,3 +1,12 @@
+2008-02-18  Stephanie Lewis  <slewis@apple.com>
+
+        Reviewed by Adam.
+
+        Remove workaround for <rdar://problem/5695848>.
+        
+        * platform/network/cf/ResourceResponseCFNet.cpp:
+        (WebCore::ResourceResponse::doUpdateResourceResponse):
+
 2008-02-18  Samuel Weinig  <sam@webkit.org>
 
         Reviewed by Geoff Garen.
